# InvictusChess

./: CMakeLists.txt  README.md  update.sh
src/: attacks.cpp  attacks.h  bitutils.cpp  bitutils.h  constants.h  engine.cpp  engine.h  eval.cpp  eval.h  log.h  main.cpp  movegen.cpp  movepicker.cpp  movepicker.h  params.cpp  params.h  perft.epd  position.cpp  position.h  search.cpp  search.h  trans.cpp  trans.h  tune.cpp  tune.h  typedefs.h  uci.cpp  uci.h  utils.cpp  utils.h
